--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node src/"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,7 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "libsodium-wrappers": "^0.7.9",
-	"node-fetch": "^2.6.6",
+    "node-fetch": "^2.6.6",
     "play-dl": "^1.2.9"
   }
 }
